# XLMate

.github/workflows/: contract-check.yml
backend/modules/api/: Cargo.toml
backend/modules/chess/src/: lib.rs
contracts/game_contract/: Cargo.toml
contracts/game_contract/src/: lib.rs  test.rs
contracts/game_registry/contracts/game-registry/src/: lib.rs
frontend/app/puzzles/: page.tsx
