[package]
name = "game_contract"
version = "0.1.0"
edition = "2024"

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
